fix bubble wrap ;-)

--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -279,7 +279,7 @@ form.bp {
 
   .bubble {
     display: inline-block;
-    width: 314px;
+    width: 313px;
     vertical-align: top;
   }
 
